поправил ошибки